infras/kustomize/flm/k8s/overlays/stage/om-flm-virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: om-flm-virtual-services
spec:
  gateways:
    - ingress-istio/chorus-gateway
  hosts:
    - "chorus-stg.one-line.com"
  http:
    # For FLM BFF
    - match:
        - uri:
            prefix: /flm/bff
      route:
        - destination:
            port:
              number: 5000
            host: om-flm-bff-service.flm-stage.svc.cluster.local
    # For locust performance test
    - match:
        - uri:
            prefix: /flm/performancetest
      route:
        - destination:
            port:
              number: 8089
            host: om-flm-performancetest-service.flm-stage.svc.cluster.local
      rewrite:
        uri: "/"
    - match:
        - uri:
            prefix: /flm/assets
      route:
        - destination:
            port:
              number: 8089
            host: om-flm-performancetest-service.flm-stage.svc.cluster.local
      rewrite:
        uri: "/assets"
    - match:
        - uri:
            prefix: /flm/swarm
      route:
        - destination:
            port:
              number: 8089
            host: om-flm-performancetest-service.flm-stage.svc.cluster.local
      rewrite:
        uri: "/swarm"       
    - match:
        - uri:
            prefix: /flm/stats
      route:
        - destination:
            port:
              number: 8089
            host: om-flm-performancetest-service.flm-stage.svc.cluster.local
      rewrite:
        uri: "/stats"  
    - match:
        - uri:
            prefix: /stats
      route:
        - destination:
            port:
              number: 8089
            host: om-flm-performancetest-service.flm-stage.svc.cluster.local
    - match:
        - uri:
            prefix: /flm/tasks
      route:
        - destination:
            port:
              number: 8089
            host: om-flm-performancetest-service.flm-stage.svc.cluster.local
      rewrite:
        uri: "/tasks"   
    - match:
        - uri:
            prefix: /flm/exceptions
      route:
        - destination:
            port:
              number: 8089
            host: om-flm-performancetest-service.flm-stage.svc.cluster.local
      rewrite:
        uri: "/exceptions"   
    - match:
        - uri:
            prefix: /flm/logs
      route:
        - destination:
            port:
              number: 8089
            host: om-flm-performancetest-service.flm-stage.svc.cluster.local
      rewrite:
        uri: "/logs"
    - match:
        - uri:
            prefix: /flm/stop
      route:
        - destination:
            port:
              number: 8089
            host: om-flm-performancetest-service.flm-stage.svc.cluster.local
      rewrite:
        uri: "/stop"
    # For FLM Frontend
    - match:
        - uri:
            prefix: /flm
      route:
        - destination:
            port:
              number: 3000
            host: om-flm-frontend-service.flm-stage.svc.cluster.local
